Mise en place Fixtures des livres

--- a/templates/livre/index.html.twig
+++ b/templates/livre/index.html.twig
@@ -1,20 +1,21 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello LivreController!{% endblock %}
+{% block title %}Liste des livres!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+<div class = "jumbotron">
+     {% for livre in livres%}
+               <article>
+                    <h2>{{ livre.title}}</h2>
+                    <div class = "metadata"> Ecrit le  21/10/2019 / Categorie: </div>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/wamp64/www/symfony/classrooms/shopstore/src/Controller/LivreController.php'|file_link(0) }}">src/Controller/LivreController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/wamp64/www/symfony/classrooms/shopstore/templates/livre/index.html.twig'|file_link(0) }}">templates/livre/index.html.twig</a></code></li>
-    </ul>
-</div>
+                    <div class = "content">
+                         <img src="https://via.placeholder.com/300x200" alt="">
+                         <p>On sait depuis longtemps que travailler avec du texte lisible et contenant du sens est source de distractions, et empêche de se concentrer </p>
+                         <p>sur la mise en page elle-même. L'avantage du Lorem Ipsum sur un texte générique comme 'Du texte. Du texte. Du texte.' est qu'il possède une distribution de lettres plus ou moins normale, et en tout cas comparable avec celle du français standard. De nombreuses suites logicielles de mise en page ou éditeurs de sites Web ont fait du Lorem Ipsum leur faux texte par défaut, et une recherche pour 'Lorem Ipsum' vous conduira vers de nombreux sites qui n'en sont encore qu'à leur phase de construction. Plusieurs versions sont apparues avec le temps, parfois par accident, souvent intentionnellement </p>
+                         <a href="#" class="btn btn-primary"> Lire la suite </a>      
+                    </div>          
+               </article>      
+     {% endfor %}         
 {% endblock %}
