Repair off my template blog_show

--- a/templates/blog/show.html.twig
+++ b/templates/blog/show.html.twig
@@ -6,7 +6,7 @@
 
 <div class = "jumbotron">
        <article>
-            <h2>Titre de mon article!</h2>
+            <h2> {{article.title}}</h2>
             <div class = "metadata"> Ecrit le  21/10/2019 / Categorie: </div>
 
              <div class = "content">
