--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -8,13 +8,13 @@
      {% for article in articles%}
                <article>
                     <h2>{{ article.title}}</h2>
-                    <div class = "metadata"> Ecrit le  21/10/2019 / Categorie: </div>
+                    <div class = "metadata"> Ecrit le : {{ article.createdAt | date('d/m/Y') }} // Categorie:  {{ article.categorie.titre }}</div>
 
                     <div class = "content">
                          <img src="https://via.placeholder.com/300x200" alt="">
-                         <p>On sait depuis longtemps que travailler avec du texte lisible et contenant du sens est source de distractions, et empêche de se concentrer </p>
-                         <p>sur la mise en page elle-même. L'avantage du Lorem Ipsum sur un texte générique comme 'Du texte. Du texte. Du texte.' est qu'il possède une distribution de lettres plus ou moins normale, et en tout cas comparable avec celle du français standard. De nombreuses suites logicielles de mise en page ou éditeurs de sites Web ont fait du Lorem Ipsum leur faux texte par défaut, et une recherche pour 'Lorem Ipsum' vous conduira vers de nombreux sites qui n'en sont encore qu'à leur phase de construction. Plusieurs versions sont apparues avec le temps, parfois par accident, souvent intentionnellement </p>
-                         <a href="{{path('blog_show')}}" class="btn btn-primary"> Lire la suite </a>      
+                          {{ article.content }}
+                         <a href="{{path('blog_show', {'id': article.id})}}" class="btn btn-primary"> Lire la suite </a>      
+                         <p> </p>
                     </div>          
                </article>      
      {% endfor %}         
