--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,9 +19,11 @@
       <li class="nav-item active">
         <a class="nav-link" href="{{path('home')}}">Accueil <span class="sr-only">(current)</span></a>
       </li>
+
       <li class="nav-item">
         <a class="nav-link" href="#">A Propos</a>
       </li>
+      
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="{{ path('blog')}}" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Liste Logement
@@ -33,7 +35,12 @@
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
       </li>
-            <li class="nav-item dropdown">
+      
+       <li class="nav-item">
+        <a class="nav-link" href="{{path('blog_nouveau')}}">Nouveau</a>
+      </li>  
+      
+      <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Nous Contacter
         </a>
