--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -37,7 +37,7 @@
       </li>
       
        <li class="nav-item">
-        <a class="nav-link" href="{{path('blog_nouveau')}}">Nouveau</a>
+        <a class="nav-link" href="#">Nouveau</a>
       </li>  
       
       <li class="nav-item dropdown">
