--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -18,4 +18,7 @@
                     </div>          
                </article>      
      {% endfor %}         
+               <div class="pagination">
+                     {{ knp_pagination_render(articles) }}
+               </div>
 {% endblock %}
