--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -4,21 +4,28 @@
 
 {% block body %}
 
-<div class = "jumbotron">
-     {% for article in articles%}
-               <article>
-                    <h2>{{ article.title}}</h2>
-                    <div class = "metadata"> Ecrit le : {{ article.createdAt | date('d/m/Y') }} // Categorie:  {{ article.categorie.titre }}</div>
+<div class = "container m-4">
+ <h4> Tous les articles disponibles!</h4>
+     
+     <div class = "row">
+          {% for article in articles%}
+               <div class = "col-md-4">
 
-                    <div class = "content">
-                         <img src="https://via.placeholder.com/300x200" alt="">
-                          {{ article.content }}
-                         <a href="{{path('blog_show', {'id': article.id})}}" class="btn btn-primary"> Lire la suite </a>      
-                         <p> </p>
-                    </div>          
-               </article>      
-     {% endfor %}         
-               <div class="pagination">
+                    <article>
+                         <h2>{{ article.title}}</h2>
+                         <div class = "metadata"> Ecrit le : {{ article.createdAt | date('d/m/Y') }} // Categorie:  {{ article.categorie.titre }}</div>
+
+                         <div class = "content">
+                              <img src="https://via.placeholder.com/300x200" alt="">
+                              {{ article.content }}
+                              <a href="{{path('blog_show', {'id': article.id})}}" class="btn btn-primary"> Lire la suite </a>      
+                              <p> </p>
+                         </div>          
+                    </article> 
+               </div> 
+          {% endfor %}         
+     </div>
+          <div class="pagination">
                      {{ knp_pagination_render(articles) }}
                </div>
 {% endblock %}
